# myopengl

./: CMakeLists.txt  README.md  myopengl.sln
Rectangle/: CMakeLists.txt  Rectangle.vcxproj  main.cpp
Triangle/: CMakeLists.txt  Triangle.vcxproj  main.cpp
asteroids_instanced/: CMakeLists.txt  main.cpp
blending/: CMakeLists.txt  main.cpp
blinnphong/: CMakeLists.txt  main.cpp
common/: common.vcxproj  commonexport.h  shader.cpp  shader.h
coordinatesystems/: CMakeLists.txt  coordinatesystems.vcxproj  coordinatesystems.vcxproj.filters  main.cpp  shader.cpp
cubemap/: CMakeLists.txt  main.cpp
data/shaders/blending/: blending.fs
data/shaders/blinnphong/: blinnphong.fs  blinnphong.vs
data/shaders/cubemap/: cubemap.fs  cubemap.vs
data/shaders/reflect/: reflect.vs
data/shaders/shadowmapping/: depthmaping.vs  shadowmapping.fs  shadowmapping.vs
data/shaders/starrysea/: starrysea.fs  starrysea.vs
data/stl/: cylinder.stl  nas.stl  sphere.stl
depthtest/: CMakeLists.txt  main.cpp
framebuffers/: CMakeLists.txt  main.cpp
framebuffers_exercise/: CMakeLists.txt  main.cpp
glfwwindow/: CMakeLists.txt  glfwwindow.vcxproj  main.cpp
mesh/: CMakeLists.txt  main.cpp  mesh.h
reflect/: CMakeLists.txt  main.cpp
shadowmapping/: CMakeLists.txt  main.cpp
simpletexture/: CMakeLists.txt  main.cpp  shader.h  simpletexture.vcxproj
starrysea/: CMakeLists.txt  main.cpp
stenciltest/: CMakeLists.txt
textures/: glwidget.cpp  glwidget.h  main.cpp  textures.vcxproj
thirddep/Simple OpenGL Image Library/projects/VC12/: SOIL.sln  SOIL.vcxproj
thirddep/SimpleOpenGLImageLibrary/projects/VC12/: SOIL.vcxproj
thirddep/assimp-3.3.1/lib/: assimp-vc140-mt.lib  zlibstaticd.lib
thirddep/common/: model.h
thirddep/glad/include/glad/: glad.h
thirddep/glad/lib/Debug/: glad.lib
thirddep/glad/lib/Release/: glad.lib
thirddep/glad/src/: glad.c
thirddep/glad/vsproj2015/: glad.sln  glad.vcxproj
thirddep/glad/vsproj2015/x64/Release/: glad.lib
thirddep/glfw/lib/: Readme.txt
thirddep/glfw/lib/Release/: glfw3.lib
threadedqopenglwidget/: glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  threadedqopenglwidget.vcxproj
